@@ -65,7 +65,7 @@ public enum JakartaPersistenceParameterBasedQuery {
         if (conditions.isEmpty()) {
             return null;
         } else if (conditions.size() == 1) {
-            return conditions.get(0);
+            return conditions.getFirst();
         }
         return CriteriaCondition.and(conditions.toArray(TO_ARRAY));
     }
